# sopel-htmlurls

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.trunk/: trunk.yaml
sopel_htmlurls/: config.py  plugin.py  template.html  urls.py
tests/: __init__.py  test_htmlurls.py
