[metadata]
name = sopel-htmlurls
version = 1.0.1
author = David Pirogov
author_email = 580286+davidpirogov@users.noreply.github.com
description = A Sopel IRC module for watching a urls and creating an easy, clickable HTML page
keywords = sopel plugin bot irc urls clickable links
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davidpirogov/sopel-htmlurls
project_urls =
    Bug Tracker = https://github.com/davidpirogov/sopel-htmlurls/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.7, <4
install_requires =
    sopel>=7.1,<8
    Jinja2>=3.1,<4
    validators>=0.20,<1

[options.entry_points]
sopel.plugins =
    htmlurls = sopel_htmlurls.plugin
